--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,12 @@ dependencies {
 
 	// jdbc log
 	'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4'
+
+	// lop4jdbc
+	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+
+	// hibernate
+	implementation 'org.hibernate.orm:hibernate-core:6.2.6.Final'
 }
 
 tasks.named('test') {
