--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #mysql
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/naesom?useUnicode=true&characterEncoding=utf-8
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/naesom?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -13,3 +13,8 @@ mybatis.configuration.map-underscore-to-camel-case=true
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
+
+#hibernate, jpa
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
