feat: Change DB(to MariaDB) and Entity

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	// mysql
-	implementation 'com.mysql:mysql-connector-j'
+	// implementation 'com.mysql:mysql-connector-j'
+
+	//mariadb
+	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4'
 
 	// jpa(@Entity)
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
