--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#mysql
+#mariadb
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/naesom?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3308/naesom?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -11,10 +11,10 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 #resources
 spring.mvc.static-path-pattern=/static/**
-spring.resources.static-locations=classpath:/static/
-spring.resources.add-mappings=true
+spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.add-mappings=true
 
 #hibernate, jpa
+#db entity? ?? ????
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.database=mysql
