--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 
 	// hibernate
 	implementation 'org.hibernate.orm:hibernate-core:6.2.6.Final'
+
+	// metadata scraping
+	implementation 'org.jsoup:jsoup:1.16.1'
 }
 
 tasks.named('test') {
